# omni-channel-ai-servicing

./: .env.example  .env.huggingface  .gitignore  CHANGELOG.md  DEMO_GUIDE.md  DEMO_REFERENCE.md  Dockerfile  EMAIL_INTEGRATION.md  FEATURES_AND_TODOS.md  LICENSE  Makefile  PHASE3_COMPLETE.md  PORTFOLIO_README.md  README_HUGGINGFACE.md  ROUTER_IMPLEMENTATION.md  evaluate_rag.py  evaluation_dataset.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_api.sh  run_email_idle.sh  run_email_poller.sh  start.sh  start_servers.sh  streamlit_app.py  test_guardrails_live.py  test_rag_retrieval.py
.github/workflows/: ci.yml
docs/: FEATURE_STRUCTURED_OUTPUT_PARSING.md  GUARDRAILS_DESIGN.md  OUTPUT_PARSING_DESIGN.md  RAG_DESIGN.md  REFACTORING_PLAN.md
evaluation/: test_dataset.json
evaluation_results/: metrics_summary.txt  ragas_results.json
faiss_index/: knowledge_base.faiss  knowledge_base.pkl  knowledge_base_stats.json
knowledge_base/: metadata.json
knowledge_base/faqs/: address_faqs.md  dispute_faqs.md  general_faqs.md  payment_faqs.md
knowledge_base/policies/: account_inquiry_policy.md  address_update_policy.md  card_services_policy.md  dispute_handling_policy.md  fraud_reporting_policy.md  payment_policy.md
mock_services/: db.py  init_db.py  main.py  models.py
mock_services/routers/: core_banking.py  crm.py  notifications.py  workflow.py
omni_channel_ai_servicing/app/: main.py  run_address_update.py  test_api.py  test_dispute_workflow.py  test_master_router.py
omni_channel_ai_servicing/app/api/: routes.py  schemas.py
omni_channel_ai_servicing/domain/models/: entities.py  intent.py
omni_channel_ai_servicing/graph/: registry.py  state.py
omni_channel_ai_servicing/graph/nodes/: __init__.py  apply_policy.py  create_case.py  (+7 more)
omni_channel_ai_servicing/integrations/: __init__.py  base_client.py  core_banking_client.py  crm_client.py  email_sender.py  notification_client.py  workflow_client.py
omni_channel_ai_servicing/llm/: client.py  output_parsers.py  prompts.py
omni_channel_ai_servicing/monitoring/: logger.py  metrics.py
omni_channel_ai_servicing/services/: email_config.py  email_idle_poller.py  email_poller.py  guardrails.py  test_email_integration.py
scripts/: build_index.py  run_api.sh  run_email_idle.sh  run_email_poller.sh  run_mock_services.sh  start_servers.sh  test_retrieval.py
src/app/: main.py  run_address_update.py  test_api.py  test_dispute_workflow.py  test_master_router.py
src/graph/: registry.py
src/integrations/: email_client.py  email_sender.py
src/services/: email_idle_poller.py  email_poller.py  email_processor.py
tests/manual/: debug_credentials.py  test_email_channel.py  test_email_simple.py  test_flow.py  test_gmail_auth.py  test_guardrails_api.py  test_rag_workflow.py  test_retrieval.py
tests/unit/: test_document_loader.py  test_email_filtering.py  test_embedding_service.py  test_guardrails.py  test_metrics.py  test_output_parsers.py  test_retriever.py  test_vector_store.py
(+30 files in other folders)
